# theorems

./: .gitignore  README.md  gradient.py  pyproject.toml
media/videos/gradient/1080p60/partial_movie_files/FillByValueExample/: partial_movie_file_list.txt
media/videos/gradient/1080p60/partial_movie_files/GradientDescent/: partial_movie_file_list.txt
media/videos/manim/1080p60/partial_movie_files/SquareToCircle/: partial_movie_file_list.txt
venv_name/: pyvenv.cfg
